--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,4 +8,17 @@ Description: Clean, analyze and visualize earthquake data from the NOAA Signific
 License: CC0
 Encoding: UTF-8
 LazyData: true
+Suggests:
+    knitr,
+    rmarkdown,
+    testthat
+VignetteBuilder: knitr
 RoxygenNote: 6.0.1
+Imports:dplyr,
+    tidyr,
+    readr,
+    ggplot2,
+    grid,
+    leaflet,
+    lubridate,
+    stringr
