--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ importFrom(dplyr,select)
 importFrom(dplyr,slice)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,draw_key_point)
+importFrom(ggplot2,geom)
 importFrom(ggplot2,ggproto)
 importFrom(ggplot2,layer)
 importFrom(grid,gList)
