--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,9 +12,9 @@ importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
+importFrom(ggplot2,Geom)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,draw_key_point)
-importFrom(ggplot2,geom)
 importFrom(ggplot2,ggproto)
 importFrom(ggplot2,layer)
 importFrom(grid,gList)
@@ -32,3 +32,4 @@ importFrom(readr,read_delim)
 importFrom(stringr,str_to_title)
 importFrom(stringr,str_trim)
 importFrom(tidyr,unite)
+importFrom(utils,download.file)
