--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(eq_location_clean)
 export(eq_map)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
+importFrom(dplyr,desc)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
