--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(eq_clean_data)
 export(eq_create_label)
 export(eq_location_clean)
 export(eq_map)
+export(geom_timeline)
+export(geom_timeline_label)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
 importFrom(dplyr,desc)
